--- a/mysite/products/templates/products/add_product.html
+++ b/mysite/products/templates/products/add_product.html
@@ -1,6 +1,16 @@
 Hello!
-<form action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data">
-    {% csrf_token %} 
-    {{form.as_p}}
-    <button type="submit">Agregar</button>
-</form>
+
+<html>
+<head>
+<title>Agregar Producto</title>
+</head>
+<body>
+
+    <form action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %} 
+        {{form.as_p}}
+        <button type="submit">Agregar</button>
+    </form>
+
+</body>
+</html>
